--- a/part3/listaDeBlogs/package.json
+++ b/part3/listaDeBlogs/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "listadeblogs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^6.7.0",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.26.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.4.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^2.0.20"
-  }
+    "name": "listadeblogs",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "cross-env NODE_ENV=production node index.js",
+        "dev": "cross-env NODE_ENV=development nodemon index.js",
+        "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent -forceExit",
+        "test:watch": "npm run test -- --watch"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "mongoose": "^6.7.0",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3",
+        "eslint": "^8.26.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.4.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "jest": "^29.2.2",
+        "nodemon": "^2.0.20",
+        "supertest": "^6.3.1"
+    },
+    "jest": {
+        "testEnvironment": "node"
+    }
 }
