--- a/part4/listaDeBlogs/package.json
+++ b/part4/listaDeBlogs/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "cross-env NODE_ENV=production node index.js",
         "dev": "cross-env NODE_ENV=development nodemon index.js",
-        "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent -forceExit",
+        "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent",
         "test:watch": "npm run test -- --watch"
     },
     "author": "",
@@ -16,6 +16,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.7.0",
         "morgan": "^1.10.0"
     },
