--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -1,22 +1,46 @@
 {
-  "name": "bloglist-frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.0"
-  }
+    "name": "bloglist-frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "jest --watchAll",
+        "cypress:open": "cypress open"
+    },
+    "dependencies": {
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.2.2",
+        "axios": "^1.1.3",
+        "babel-jest": "^29.3.0",
+        "jest": "^29.3.0",
+        "jest-environment-jsdom": "^29.3.0",
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "whatwg-fetch": "^3.6.2"
+    },
+    "devDependencies": {
+        "@testing-library/dom": "^8.19.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/react": "^18.0.22",
+        "@types/react-dom": "^18.0.7",
+        "@vitejs/plugin-react": "^2.2.0",
+        "cypress": "^10.11.0",
+        "eslint": "^8.27.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.5.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.31.10",
+        "vite": "^3.2.0"
+    },
+    "eslintConfig": {
+        "extends": "eslint:standard"
+    }
 }
